# iotoolz

./: .coveragerc  .envfile  .envrc  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: custom_stream.md  s3.md  streams.md  utils.md
docs/classes/: AbcStream.md  FileStream.md  HttpStream.md  MinioStream.md  S3Stream.md  StreamInfo.md  Streams.md  TempStream.md
docs/stylesheets/: extra.css
examples/: csv_transform.py  pipe.py
iotoolz/: __init__.py  _abc.py  _chardet.py  _toolz.py  file.py  file_test.py  http.py  http_test.py  rxstream.py  rxstream_test.py  streams.py  streams_test.py  temp.py  temp_test.py  utils.py  utils_test.py
iotoolz/extensions/: __init__.py  _not_implemented.py  minio.py  minio_test.py  s3.py  s3_test.py
iotoolz/readers/: __init__.py  pandas.py
iotoolz/transforms/: __init__.py  csv_transform.py
rst/: conf.py  index.rst
