[tool.poetry]
name = "iotoolz"
version = "0.1.0-rc-4"
description = "Consistent io iterface to read and write from/to both local and different remote resources (e.g. http, s3)"
keywords = ["io", "stream", "requests", "ftp", "s3"]
authors = ["eterna2 <eterna2@hotmail.com>"]
maintainers = ["eterna2 <eterna2@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "iotoolz"}
]
exclude = ["iotoolz/*_test.py", "iotoolz/**/*_test.py", "iotoolz/conftest.py"]
homepage = "https://github.com/e2fyi/iotoolz"
repository = "https://github.com/e2fyi/iotoolz"
documentation = "https://iotoolz.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
Changelog = "https://github.com/e2fyi/iotoolz/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.6,<4"
typing-extensions = "*"
python-magic = {version = "0.4.*", markers = "sys_platform == 'linux'"}
python-magic-bin = {version = "0.4.*", markers = "sys_platform == 'darwin' or sys_platform == 'windows'"}
pydantic = ">=0.30"
toml = "^0.10.1"
requests = "^2.24.0"
requests-toolbelt = "^0.9.1"
cytoolz = "^0.11.0"
chardet = "^3.0.4"
boto3 = {version = "^1.16.5", optional = true}
minio = {version = "^6.0.0", optional = true}

[tool.poetry.extras]
minio = ["minio"]
boto3 = ["boto3"]
all = ["minio", "boto3"]

[tool.poetry.dev-dependencies]
black = {version = "19.10b0", allow-prereleases = true, python = "^3.6", markers = "platform_python_implementation == 'CPython'"}
mypy = "^0.782"
flake8 = "^3.8.3"
pylint = "^2.6.0"
bandit = "^1.6.2"
flake8-isort = "^4.0.0"
flake8-comprehensions = "^3.2.3"
coverage = "^5.3"
coveralls = "^2.1.2"
requests_mock = "^1.8.0"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"
autoflake = "^1.4"
pytest-cov = "^2.10.1"
safety = "^1.9.0"
mkdocs-material = "^6.0.2"
mkdocstrings = "^0.13.6"
mkdocs-git-revision-date-localized-plugin = "^0.7.2"
markdown_include = "^0.6.0"
moto = {extras = ["s3"], version = "^1.3.16"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["iotoolz"]
known_third_party = [
    "magic",
    "toolz",
    "cytoolz",
    "requests_toolbelt",
    "pydantic",
    "toml",
    "magic",
]
# indent = '    '
# multi_line_output = 3
# length_sort = 1
# lines_between_types = 1

[tool.black]
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
